# rcdb

./: .gitignore  .travis.yml  README.md  SConstruct  alembic.ini  alembic_rcdb  environment.bash  environment.csh  environment.fish  environment.zsh  install.linux.txt  rcnd  requirements.txt  run_tests.py  start_tdb_www.py  start_www.py
alembic/: env.py
alembicc/: env.py
apache2/: installation_help.md  rcdb.conf
cpp/: CMakeLists.txt  SConstruct
cpp/TDB/: Board.h  BoardFactory.h  DataProvider.h  Error.h  MySqlConnector.cpp  MySqlConnector.h  StringUtils.cc  StringUtils.h
cpp/Tests/: test_Board.cc  test_BoardFactory.cc  test_DataProvider.cc  test_MySqlConnector.cc  tests.cc
cpp/cmake/: FindMySql.cmake
cpp/examples/: SConscript  get_fadc_masks.cpp  get_fadc_masks.cpp.cpp  get_trigger_params.cpp  mysql_add.cpp  simple.cpp  write_array_to_json.cpp  write_conditions.cpp  write_objects_to_json.cpp
cpp/include/RCDB/: Condition.h  ConfigParser.h  Connection.h  DataProvider.h  Exceptions.h  MySqlConnectionInfo.h  MySqlProvider.h  RcdbFile.cpp  RcdbFile.h  SQLiteCpp.h  SqLiteProvider.h  StringUtils.h  WritingConnection.h
cpp/include/SQLiteCpp/: Assertion.h  Backup.h  Database.h  Exception.h  Statement.h
cpp/include/json/: json.hpp
cpp/include/tao/json/events/: binary_to_exception.hpp
cpp/src/: SConscript
cpp/src/RCDB/: SConscript
cpp/src/SQLite/: SConscript
cpp/src/SQLiteCpp/: Column.cpp  Database.cpp  SConscript  Transaction.cpp
cpp/tests/: SConscript  catch.cpp  test_ConfigParser.cpp  test_Connection.cpp  test_MySqlProvider.cpp  test_SqLiteProvider.cpp
doc/: Deployment.md  Development.md  README.md  Select-runs-and-get-values.md  _sidebar.md  common_errors.md  index.html  rcdb_conditions_python_tutorial.rst  rcdb_conditions_python_tutorial.wiki
docs/: Adding-condition-values.md  Connection.md  Cpp.md  Creating-condition-types.md  DB-and-API-structure.md  DaqOverview.md  (+19 more)
python/: .gitignore  .repomixignore  MANIFEST.in  README.md  board_browser.py  create_conditions_view.py  create_empty_db.py  create_empty_sqlite.py  create_test_sqlite.py  edit_run_comment.py  example__run_to_board_confs.py  example_basic_conditions.py  example_cdc_gas_pressure.py  example_conditions_basic.py  example_conditions_query.py  example_conditions_store_array.py  example_conditions_store_object.py  example_runs_by_date.py  example_select_runs_by_event_count.py  example_select_values.py  example_simple_queries.py  example_sqlalchemy_query.py  examples.py  fadc250_example1.cnf  fadc250_example2.cnf  fill_test_conditions.py  fill_test_run1.py  fill_test_runs.py  get_values_fast.py  halld_main_config_parser.py  intelligent_query.py  main_window.py  packaging.md  parse_coda_log.py  prestart_example.xml  profile.txt  pyproject.toml  rcnd.py  repair_db.py  reparse_end_of_2014_db.py  (+18 more)
python/addressbook/: addresswidget.py  autocomplete.py
python/daq/: test_epics.py  update.py  update_coda.py  update_epics.py  update_roc.py
python/examples/: 01_select_values_simple.py  02_select_values_extended.py  03_select_values_custom_runs.py  example_cdc_gas_pressure.py  example_conditions_basic.py  example_conditions_store_object.py  example_runs_by_date.py  example_select_halld_values.py  example_simple_queries.py  example_sqlalchemy_query.py  fadc250_example2.cnf  prestart_example.xml
python/halld_rcdb/: config_files_grabber.py  main_config_parser.py  parse_coda_log_v2  roc_config_finder.py  run_config_parser.py  run_end  run_go  run_update_rcdb  walker_add_configuration_files.py
python/jinja2/testsuite/: ext.py  inheritance.py
python/ply/: lex.py
python/pymysql/tests/: test_basic.py  test_optionfile.py
python/rcdb/: .gitignore  __init__.py  __main__.py  admin_cmd.py  alias.py  app_context.py  cmd.py  coda_parser.py  condition_query_builder.py  config_parser.py  errors.py  file_archiver.py  halld_daq_config_parser.py  lexer.py  log_format.py  model.py  provider.py  stopwatch.py  update.py  version.py
python/rcdb/cli/: __main__.py  add.py  app.py  context.py  db.py  info.py  ls.py  mkdb.py  rp.py  run.py  select.py  web.py
python/rcdb/cli/repair/: __init__.py  evio_files.py
python/rcdb/rcdb_cli/: __main__.py  app.py  db.py  ls.py  mkdb.py  rp.py  web.py
python/rcdb/rcdb_cli/repair/: evio_files.py
python/rcdb/web/: __init__.py
python/rcdb/web/modules/: __init__.py  logs.py  runs.py  select_values.py  statistics.py
python/rcdb/web/static/DataTables/: datatables.min.css
python/rcdb/web/static/DataTables/DataTables-1.10.10/css/: jquery.dataTables.min.css
python/rcdb/web/static/css/: jquery.dataTables.yadcf.css  main.css
python/rcdb/web/templates/: default_run_table.html  index.html  run_search_box.html
python/rcdb/web/templates/layouts/: base.html
python/rcdb/web/templates/logs/: index.html
python/rcdb/web/templates/runs/: index.html
python/rcdb/web/templates/statistics/: index.html
python/runconf_db/: __init__.py  config_parser.py  constants.py  model.py  provider.py
python/sqlalchemy/dialects/mysql/: base.py
python/sqlalchemy/dialects/sqlite/: base.py
python/tests/: README.md  benchmark_conditions.py  benchmark_selecting.py  create_test_database.py  helpers.py  run-5627_FCAL_BCAL_PS_m7.conf  test.sqlite.db  test_cli_add_condition.py  test_cli_add_file.py  test_cli_add_type.py  test_coda_parser.py  test_conditions.py  test_config_files.py  test_config_parser.py  test_get_run_periods.py  test_get_runs.py  test_halld_run_config_parser.py  test_parse_several_files.py  test_run.py  test_save_files.py  test_select_runs.py  test_select_values.py  test_sql_schema_version.py  test_value_comparison.py
python/trigger_db/: __init__.py  file_archiver.py  model.py  provider.py
python/utilites/: create_conditions_view.py  create_empty_db.py  create_empty_sqlite.py  create_test_sqlite.py  edit_run_comment.py  find_doublegainer_conditions.py  intelligent_query.py  rcnd.py  replace_comments.py  runBrowser.py  run_mysql_only_query.py  sqlite2mysql.py  walker_times.py
python/utilities/: fill_test_conditions.py  repair_conditions_doppelgangers.py  run_end.py
(+204 files in other folders)
